[package]
name = "course_recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2.6.0", features = ["serde_with"] }

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync"]
