[package]
name = "course_recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2.6.0", features = ["serde_with"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
petgraph = "0.6.3"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["sync"] 
